src/components/styles.css
:root {
    /* Colors */
    --color-background: #ffffff;
    --color-primary: #ff5722;
    --color-secondary: #212121;
    --color-content: #BDBDBD;
    --color-content-light: #eeeeee;
    --color-content-dark: #757575;

    /* Components */
    --search-width: 15rem;
}

* {
  box-sizing: border-box;
}

html {
  margin: auto;
}

body {
  background-color: var(--color-background);
  overflow: auto;
}

#root {
    height: 100%;
}

nav {
    padding: 1rem 1rem;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-content: center;
    background-color: var(--color-secondary);
    z-index: 2;
    box-shadow: 0 0 3px;
}

nav div.text, nav i {
    color: var(--color-background);
}

nav h3, nav button {
    color: var(--color-background)
}

nav button {
    background-color: unset;
    border: none;
    cursor: pointer;
}

nav button:hover {
    color: var(--color-primary);
}

a {
    color: var(--color-secondary);
}

figcaption {
  text-align: center;
  word-break: break-word;
  width: 100px;
  padding-top: 3px;
  margin: auto;
}

img {
  width: 100px;
  height: auto;
  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
  opacity: 0.99;
  cursor: move;
}

img:hover{
  opacity: .5;
}

p {
  color: var(--color-secondary);
  line-height: 1.4rem;
  margin: 0;
}

h1, h2, h3, h4 {
    margin: 0 !important;
}

b {
  padding-right: 0.3em;
}

table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

td {
  transition: all 0.5s ease;
}

caption {
  padding-bottom: 0.5em;
  color: #303032;
  text-align: left;
  background-color: var(--color-background);
  white-space: nowrap;
}

table {
  table-layout: fixed;
  border-collapse: collapse;
  background-color: var(--color-background);
  float: left;
  display: table-cell;
}

li {
  display: block;
  text-decoration: none;
}

ul {
  padding-left: 1rem;
  display: table-cell;
  white-space: nowrap;
}

#search {
    position: fixed;
    top: 0;
    left: 0;
    padding-top: 5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    width: var(--search-width);
    z-index: 1;
    background-color: var(--color-background);
}

.pad-1 {
  padding: 0.1em;
}
.pad-2 {
  padding: 0.2em;
}
.pad-3 {
  padding: 0.3em;
}
.pad-4 {
  padding: 0.4em;
}
.pad-5 {
  padding: 0.5em;
}

.home {
  margin-top: 5rem;
  margin-left: calc(var(--search-width) + 1rem);
  height: 100%;
  overflow: scroll;
  padding: .5rem;
}

.search {
  display: block;
  position: absolute;
}

.search-bar {
    margin-bottom: 1rem;
}

.results {
  margin: auto;
  max-height: 100vh;
  overflow: auto;
}

#config {
    display: flex;
    background-color: var(--color-content-light);
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;
    padding: 1rem 2rem;
    padding-top: 5rem;
    height: 100%;
    z-index: 1;
    box-shadow: 0 0 5px;
}

.config-radios {
    display: flex !important;
    flex-direction: column;
    justify-content: space-evenly;
}

.collage-column {
    padding-top: 8.2rem !important;
}

.collage-container {
  background-color: var(--color-background);
  width: max-content;
  display: flex;
  flex-direction: column;
}

.collage-padded {
    padding: 1rem;
}

.collage-image {
  display: block;
}

.collage-type{
    margin-top: 0 !important;
    margin-bottom: .5rem;
}

.collage-title {
    border: none;
    background-color: var(--color-background);
    font-size: 2rem;
    width: 100%;
}

.album-big {
  width: 150px;
  height: auto;
}

.album-big + figcaption {
  width: 150px;
}

.album {
  width: 100px;
  height: auto;
}

.film {
  width: 100px;
  height: 150px;
}

.game {
   height: 100px;
  width: 150px;
}

.count {
  display: flex;
  justify-content: space-between;
  margin-bottom: .5rem;
}

.count-label {
  margin: 0 !important;
}

.count-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}

.top-10-top {
  margin: 1em 0;
}

.top-10-bottom {
  margin: 1em 0;
}

